fix: shift and capslock functions

--- a/project/css/style.css
+++ b/project/css/style.css
@@ -54,7 +54,9 @@ body {
 }
 
 .key-active {
-  background: rgba(92, 92, 92, 0.8);
+  background: black;
+  color: white;
+  transform: scale(0.97);
 }
 
 #text-field {
